--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "portfolio-react",
-  "homepage": "https://dineshsonesha.github.io/dinesh-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build ",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
